# HRD

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.e2e.yml  docker-compose.yml  entrypoint.sh  generate_token.py  main.py  pyproject.toml  requirements-dev.txt  requirements-e2e.txt  requirements.txt
alembic/: env.py
alembic/versions/: 71cd763f56f9_add_soft_delete_columns.py  78640178730a_drop_user_objects_table.py  79b0c7d86372_initial_baseline.py
database/: db.py  models.py
handlers/: admin.py  auth.py  broadcast.py  common.py  company.py  employee_transition.py  fallback.py  groups.py  knowledge_base.py  learning_paths.py  manager_attestation.py  manager_menu.py  mentor_assignment.py  mentorship.py  objects.py  registration.py  test_taking.py  tests.py  trainee_trajectory.py  trajectory_editor.py  user_activation.py  user_edit.py
handlers/company/: __init__.py  company.py  groups.py  objects.py
handlers/core/: __init__.py  auth.py  common.py  fallback.py  registration.py
handlers/fallback/: __init__.py  company.py  grouped.py  knowledge.py  registration.py  tests.py  training.py  universal.py
handlers/knowledge/: __init__.py  knowledge_base.py
handlers/management/: __init__.py  employee_transition.py  manager_attestation.py  manager_menu.py
handlers/tests/: __init__.py  broadcast.py  test_taking.py  tests.py
handlers/training/: __init__.py  learning_paths.py  mentor_assignment.py  mentorship.py  trainee_trajectory.py  trajectory_editor.py
handlers/users/: __init__.py  admin.py  role_permissions.py  user_activation.py  user_edit.py
keyboards/: keyboards.py
middlewares/: bot_middleware.py  company_middleware.py  db_middleware.py  role_middleware.py
src/bot/: __main__.py  config.py
src/tests/: conftest.py
states/: filters.py  states.py
tests/: conftest.py
utils/: logger.py  scheduler.py  test_progress_formatters.py  timezone.py  trajectory_formatters.py
(+179 files in other folders)
